clang/test/BSC/Negative/Others/cpp_have_but_cbs_not/decl_forbidden.cbs
// RUN: %clang_cc1 -verify %s

void test1(int x){
    switch(x){
        case 0:
            int a=0;// expected-error {{expected expression}}
            break;
        default:{
            int a =0;//benign
        }
    }
}

int test2(int x) {
    if(x>10){
        goto label0;
    }else if(x<100){
        goto label1;
    }
    int a;
    goto label2;
label0:
    int b=0;// expected-error {{expected expression}}
    return 0;

label1:{
    int b=0;// benign
    return a;
}
label2:
    a+=1;
    return a;// benign
}

int test3(void) {
    int a=0;
    if(a>0)
        int b=0;// expected-error {{expected expression}}
    while(a>0)
        int b=0;// expected-error {{expected expression}}
    for(;;)
        int b=0;// expected-error {{expected expression}}
}